feat: add deterministic server player contact response