@@ -39,29 +39,36 @@ class FixedStepVolleyballPlayerContactTests {
     }
 
     @Test
-    void playerContactDoesNotChangeBallTrajectory() {
+    void newPlayerContactAppliesResponseAfterIncomingEvent() {
         VolleyballState initialState = overlappingInitialState();
-        FixedStepVolleyballSimulator referenceSimulator =
-                new FixedStepVolleyballSimulator(initialState);
         FixedStepVolleyballSimulator contactSimulator =
                 new FixedStepVolleyballSimulator(initialState);
 
-        BallSimulationAdvanceResult referenceResult = referenceSimulator.advance(
-                FIXED_STEP_SECONDS
-        );
         BallSimulationAdvanceResult contactResult = contactSimulator.advance(
                 FIXED_STEP_SECONDS,
                 List.of(overlappingPlayer())
         );
 
-        assertTrue(referenceResult.events().isEmpty());
-        assertEquals(1, contactResult.events().size());
-        assertInstanceOf(PlayerBallContactEvent.class, contactResult.events().getFirst());
-        assertEquals(referenceSimulator.getState(), contactSimulator.getState());
-        assertEquals(
-                VolleyballSimulationMath.stepFreeFlight(initialState, FIXED_STEP_SECONDS),
-                contactSimulator.getState()
+        VolleyballState incomingState = VolleyballSimulationMath.stepFreeFlight(
+                initialState,
+                FIXED_STEP_SECONDS
         );
+        assertEquals(2, contactResult.events().size());
+        PlayerBallContactEvent contactEvent = assertInstanceOf(
+                PlayerBallContactEvent.class,
+                contactResult.events().get(0)
+        );
+        PlayerBallContactResponseEvent responseEvent = assertInstanceOf(
+                PlayerBallContactResponseEvent.class,
+                contactResult.events().get(1)
+        );
+        assertEquals(incomingState.position(), contactEvent.ballPosition());
+        assertEquals(incomingState.velocity(), contactEvent.ballVelocity());
+        assertEquals(contactEvent.ballVelocity(), responseEvent.incomingVelocity());
+        assertEquals(incomingState.position(), contactSimulator.getState().position());
+        assertEquals(new BallVector3(0.0, 6.3, 5.0),
+                contactSimulator.getState().velocity());
+        assertEquals(contactSimulator.getState().velocity(), responseEvent.outgoingVelocity());
     }
 
     @Test
@@ -76,8 +83,9 @@ class FixedStepVolleyballPlayerContactTests {
         );
 
         assertEquals(3, result.executedSteps());
-        assertEquals(1, result.events().size());
-        assertInstanceOf(PlayerBallContactEvent.class, result.events().getFirst());
+        assertEquals(2, result.events().size());
+        assertInstanceOf(PlayerBallContactEvent.class, result.events().get(0));
+        assertInstanceOf(PlayerBallContactResponseEvent.class, result.events().get(1));
     }
 
     @Test
@@ -105,9 +113,11 @@ class FixedStepVolleyballPlayerContactTests {
                 List.of(overlappingPlayer)
         );
 
-        assertEquals(1, entry.events().size());
+        assertEquals(2, entry.events().size());
         assertTrue(leave.events().isEmpty());
-        assertEquals(1, reentry.events().size());
+        assertEquals(2, reentry.events().size());
+        assertInstanceOf(PlayerBallContactEvent.class, reentry.events().get(0));
+        assertInstanceOf(PlayerBallContactResponseEvent.class, reentry.events().get(1));
     }
 
     @Test
@@ -127,12 +137,13 @@ class FixedStepVolleyballPlayerContactTests {
                 List.of(farPlayer, overlappingPlayer)
         );
 
-        assertEquals(1, result.events().size());
+        assertEquals(2, result.events().size());
         PlayerBallContactEvent event = assertInstanceOf(
                 PlayerBallContactEvent.class,
-                result.events().getFirst()
+                result.events().get(0)
         );
         assertEquals(overlappingPlayer.playerId(), event.playerId());
+        assertInstanceOf(PlayerBallContactResponseEvent.class, result.events().get(1));
     }
 
     @Test
@@ -148,8 +159,10 @@ class FixedStepVolleyballPlayerContactTests {
                 List.of(player)
         );
 
-        assertEquals(1, resultAfterReset.events().size());
-        assertInstanceOf(PlayerBallContactEvent.class, resultAfterReset.events().getFirst());
+        assertEquals(2, resultAfterReset.events().size());
+        assertInstanceOf(PlayerBallContactEvent.class, resultAfterReset.events().get(0));
+        assertInstanceOf(PlayerBallContactResponseEvent.class,
+                resultAfterReset.events().get(1));
     }
 
     @Test
@@ -174,10 +187,13 @@ class FixedStepVolleyballPlayerContactTests {
         assertEquals(CourtResult.IN, groundEvent.courtResult());
         assertEquals(CourtSide.CENTER, groundEvent.courtSide());
         assertEquals(VolleyballConfig.RADIUS_METERS, groundEvent.position().y(), 0.0);
+        assertTrue(result.events().stream().noneMatch(
+                PlayerBallContactResponseEvent.class::isInstance
+        ));
     }
 
     @Test
-    void frontendPreviewEmitsPlayerContactBeforeInSideBGroundContact() {
+    void frontendPreviewRespondsTowardSideAAndLandsIn() {
         VolleyballState initialState = new VolleyballState(
                 new BallVector3(0.0, 3.0, -3.0),
                 new BallVector3(0.0, 4.5, 6.0)
@@ -189,36 +205,107 @@ class FixedStepVolleyballPlayerContactTests {
         );
         FixedStepVolleyballSimulator contactSimulator =
                 new FixedStepVolleyballSimulator(initialState);
-        FixedStepVolleyballSimulator referenceSimulator =
-                new FixedStepVolleyballSimulator(initialState);
         List<BallSimulationEvent> events = new ArrayList<>();
+        boolean crossedCenterBeforeGround = false;
 
         for (int step = 0; step < 180 && !contactSimulator.hasGroundContactOccurred(); step++) {
             BallSimulationAdvanceResult contactResult = contactSimulator.advance(
                     FIXED_STEP_SECONDS,
                     List.of(playerB)
             );
-            referenceSimulator.advance(FIXED_STEP_SECONDS);
             events.addAll(contactResult.events());
-            assertEquals(referenceSimulator.getState(), contactSimulator.getState());
+            if (!contactSimulator.hasGroundContactOccurred()
+                    && contactSimulator.getState().position().z() <= 0.0) {
+                crossedCenterBeforeGround = true;
+            }
         }
 
         assertTrue(contactSimulator.hasGroundContactOccurred());
-        assertEquals(2, events.size());
+        assertTrue(crossedCenterBeforeGround);
+        assertEquals(3, events.size());
         PlayerBallContactEvent playerEvent = assertInstanceOf(
                 PlayerBallContactEvent.class,
                 events.get(0)
         );
+        PlayerBallContactResponseEvent responseEvent = assertInstanceOf(
+                PlayerBallContactResponseEvent.class,
+                events.get(1)
+        );
         BallGroundContactEvent groundEvent = assertInstanceOf(
                 BallGroundContactEvent.class,
-                events.get(1)
+                events.get(2)
         );
         assertEquals("player-b", playerEvent.playerId());
         assertEquals(TeamSide.B, playerEvent.teamSide());
         assertEquals(playerB.position(), playerEvent.playerPosition());
+        assertEquals(TeamSide.B, responseEvent.teamSide());
+        assertEquals(6.3, responseEvent.outgoingVelocity().y());
+        assertEquals(-5.0, responseEvent.outgoingVelocity().z());
         assertEquals(CourtResult.IN, groundEvent.courtResult());
-        assertEquals(CourtSide.B, groundEvent.courtSide());
-        assertEquals(referenceSimulator.getState(), contactSimulator.getState());
+        assertEquals(CourtSide.A, groundEvent.courtSide());
+    }
+
+    @Test
+    void incomingContactEventKeepsPreResponseVerticalVelocity() {
+        double gravity = VolleyballSimulationConfig.GRAVITY_METERS_PER_SECOND_SQUARED;
+        VolleyballState initialState = new VolleyballState(
+                new BallVector3(0.0, 1.0, 0.0),
+                new BallVector3(0.0, -3.0 + gravity * FIXED_STEP_SECONDS, 0.0)
+        );
+        FixedStepVolleyballSimulator simulator = new FixedStepVolleyballSimulator(initialState);
+
+        BallSimulationAdvanceResult result = simulator.advance(
+                FIXED_STEP_SECONDS,
+                List.of(overlappingPlayer())
+        );
+
+        PlayerBallContactEvent contactEvent = assertInstanceOf(
+                PlayerBallContactEvent.class,
+                result.events().get(0)
+        );
+        assertEquals(-3.0, contactEvent.ballVelocity().y(), 1.0e-12);
+        assertEquals(6.3, simulator.getState().velocity().y());
+    }
+
+    @Test
+    void multipleNewContactsEmitAllButRespondOnlyToFirstTarget() {
+        FixedStepVolleyballSimulator simulator = new FixedStepVolleyballSimulator(
+                overlappingInitialState()
+        );
+        PlayerBallContactTarget firstTarget = new PlayerBallContactTarget(
+                "first-player",
+                TeamSide.B,
+                new BallVector3(0.0, 0.0, 0.0)
+        );
+        PlayerBallContactTarget secondTarget = new PlayerBallContactTarget(
+                "second-player",
+                TeamSide.A,
+                new BallVector3(0.0, 0.0, 0.0)
+        );
+
+        BallSimulationAdvanceResult result = simulator.advance(
+                FIXED_STEP_SECONDS,
+                List.of(firstTarget, secondTarget)
+        );
+
+        assertEquals(3, result.events().size());
+        PlayerBallContactEvent firstContact = assertInstanceOf(
+                PlayerBallContactEvent.class,
+                result.events().get(0)
+        );
+        PlayerBallContactEvent secondContact = assertInstanceOf(
+                PlayerBallContactEvent.class,
+                result.events().get(1)
+        );
+        PlayerBallContactResponseEvent response = assertInstanceOf(
+                PlayerBallContactResponseEvent.class,
+                result.events().get(2)
+        );
+        assertEquals("first-player", firstContact.playerId());
+        assertEquals("second-player", secondContact.playerId());
+        assertEquals("first-player", response.playerId());
+        assertEquals(TeamSide.B, response.teamSide());
+        assertEquals(-5.0, response.outgoingVelocity().z());
     }
 
     private static VolleyballState overlappingInitialState() {
